stages/stage2/set1-baseline/k8s/networkpolicies/apps-allow-init-booking-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-init-booking-db-to-booking-db
  namespace: apollo-airlines-apps
spec:
  podSelector:
    matchLabels:
      app: booking-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: init-booking-db
      ports:
        - protocol: TCP
          port: 5432
