stages/stage2/set1-baseline/k8s/networkpolicies/infra-allow-flight-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flight-app-to-flight-db
  namespace: apollo-airlines-apps
spec:
  podSelector:
    matchLabels:
      app: flight-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: apollo-airlines-apps
          podSelector:
            matchLabels:
              app: flight
      ports:
        - protocol: TCP
          port: 5432
